{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 240,
  "lineage": "5b5946fb-016f-3ecc-7e41-b38c27c99d77",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "devops_vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/networkInterfaces/devops-aks-vm-nic",
            "internal_domain_name_suffix": "fj4a0eeepidufngbhl4ddagzqf.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/devops-aks-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "northeurope",
            "mac_address": "00-0D-3A-B6-9A-58",
            "name": "devops-aks-vm-nic",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "devops-aks-resource-group",
            "virtual_machine_id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Compute/virtualMachines/devops-aks-vm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.devops_aks_subnet",
            "azurerm_virtual_network.devops_aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/networkSecurityGroups/devops-aks-vm-nsg",
            "location": "northeurope",
            "name": "devops-aks-vm-nsg",
            "resource_group_name": "devops-aks-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "AllowBastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/networkSecurityGroups/devops-aks-vm-nsg/securityRules/AllowBastion",
            "name": "AllowBastion",
            "network_security_group_name": "devops-aks-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devops-aks-resource-group",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/publicIPAddresses/devops-aks-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.138.136.43",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "devops-aks-bastion-pip",
            "resource_group_name": "devops-aks-resource-group",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.2.0/27"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-aks-resource-group",
            "virtual_network_name": "devops-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.devops_aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "devops_aks_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "aksdelegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.ContainerService/managedClusters"
                  }
                ]
              }
            ],
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/devops-aks-subnet",
            "name": "devops-aks-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-aks-resource-group",
            "virtual_network_name": "devops-aks-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.devops_aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vm_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/devops-aks-subnet",
            "network_security_group_id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/networkSecurityGroups/devops-aks-vm-nsg",
            "subnet_id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/devops-aks-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.vm_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.devops_aks_subnet",
            "azurerm_virtual_network.devops_aks_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "devops_aks_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "100d7c2a-7a84-4207-b4c1-3afc3180d985",
            "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet",
            "location": "northeurope",
            "name": "devops-aks-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "devops-aks-resource-group",
            "subnet": [
              {
                "address_prefixes": [
                  "10.2.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "aksdelegation",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.ContainerService/managedClusters"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/devops-aks-subnet",
                "name": "devops-aks-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/networkSecurityGroups/devops-aks-vm-nsg"
              },
              {
                "address_prefixes": [
                  "10.2.2.0/27"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/19f6639e-1372-43e9-b92b-f6cbd3c85e24/resourceGroups/devops-aks-resource-group/providers/Microsoft.Network/virtualNetworks/devops-aks-vnet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}